--- a/src/features/home/Dashboard.scss
+++ b/src/features/home/Dashboard.scss
@@ -13,6 +13,10 @@
     top: 25px;
     right: 25px;
     z-index: 10;
+    @include responsive(mobile) {
+      top: 5px;
+      right: 5px;
+    }
   }
   .helper, .hint, .greeting {
     position: absolute;
@@ -21,12 +25,18 @@
     left: 0;
   }
   .greeting {
-    top: 5%;
+    top: 20px;
+    @include responsive(mobile) {
+      top: 45px;
+    }
   }
   .helper {
-    top: calc(5% + 50px);
+    top: 70px;
     transition: opacity 0.5s, visibility 0.5s;
     text-shadow: 0 2px 3px rgba(0,0,0,0.5);
+    @include responsive(mobile) {
+      top: 95px;
+    }
     &.hidden {
       opacity: 0;
       visibility: hidden;
@@ -70,11 +80,13 @@ $fontSize: 48px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    padding: 0 20px;
   }
   .text, .thought-input {
     font-size: $fontSize;
     line-height: $fontSize;
     min-height: $fontSize;
+    padding: 0 50px;
     font-family: 'roboto', cursive;
     font-weight: 300;
     mix-blend-mode: screen;
@@ -82,17 +94,19 @@ $fontSize: 48px;
     text-align: center;
     white-space: pre-wrap;
     word-break: break-word;
-    transition: transform 0.5s, color 0.5s, filter 0.5s ease-in, opacity 0.5s;
+    transition: transform 0.5s, color 0.5s, filter 0.5s ease-in, opacity 0.5s, transform-origin 0.5s;
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
   }
   .thought-input {
-    color: rgba(random(150) + 105, random(150) + 105, random(150) + 105, 0.5);
+    color: rgba(random(150) + 105, random(150) + 105, random(150) + 105, 0.0);
     caret-color: #fff;
     display: block;
     width: 100%;
     background: transparent;
-    padding: 0;
+    padding: 1px 50px;
+    margin: -1px 0;
+    box-sizing: border-box;
     border: none;
     outline: none;
     & + span {
@@ -109,7 +123,7 @@ $fontSize: 48px;
     }
   }
   .text {
-    @for $i from 0 through 79 {
+    @for $i from 0 through 40 {
       $key: $i + 1;
       &:nth-child(#{$key}) {
         $row: floor($i / 20);
@@ -120,7 +134,7 @@ $fontSize: 48px;
           $key * 5% - $row * 100% + random(5) $row * 50% + 50% + random(5),
           $i * 5% - $row * 100% - random(2) $row * 50% + 50% + random(30)
         );
-        transform-origin: ($i + 0.5) * 5% - $row * 100% - 50% $row * 50% - 25%;
+        transform-origin: ($i + 0.5) * 5% - $row * 100% $row * 50% + 25%;
         filter: blur(#{random(7) - 3}px);
         .text_inner1 {
           animation: vertical random(1000) + 700ms random(100) + 0ms ease-in-out infinite alternate;
@@ -139,7 +153,7 @@ $fontSize: 48px;
       .text_inner1, .text_inner2 {
         animation: none !important;
       }
-      @for $i from 1 through 80 {
+      @for $i from 1 through 40 {
         &:nth-child(#{$i}) {
           @if random(2) > 1 {
             animation: spinText random(2000) + 1700ms linear 0ms infinite;
@@ -163,6 +177,16 @@ $fontSize: 48px;
       .text_inner1, .text_inner2 {
         animation: none;
       }
+      @for $i from 1 through 40 {
+        &:nth-child(#{$i}) {
+          @if random(2) > 1 {
+            transform-origin: 0 50%;
+          } @else {
+            transform-origin: 100% 50%;
+          }
+        }
+      }
+
     }
   }
 }
@@ -185,10 +209,10 @@ $fontSize: 48px;
 }
 @keyframes spinText {
   0% {
-    transform: rotate(0deg) translate3d(-50%,-50%,0);
+    transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg) translate3d(-50%,-50%,0);
+    transform: rotate(360deg);
   }
 }
 
