--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -2,3 +2,16 @@
 
 $modalText: #474747;
 $borderColor: #dedede;
+
+$media-mobile-max: 767px !default;
+
+@mixin responsive($query) {
+  @each $media in $query {
+    @if $media == mobile {
+      @media (max-width: $media-mobile-max) { @content; }
+    }
+    @else if $media == desktop {
+      @media (min-width: $media-mobile-max + 1) { @content; }
+    }
+  }
+}
